flow2flow-cli/tests/snapshots/cli_integration__publish_weather_team.snap
---
source: flow2flow-cli/tests/cli_integration.rs
assertion_line: 42
expression: publish_team
---
{
  "activated": false,
  "deprecated_nodes_array": false,
  "flow_id": "assistant.weather.daily",
  "path": "/tenants/acme/teams/sales-na/flows/assistant.weather.daily@1",
  "scope": {
    "team": "sales-na",
    "tenant": "acme",
    "user": null
  },
  "status": "published",
  "version": 1
}
