flow2flow-cli/tests/snapshots/cli_integration__run_weather.snap
---
source: flow2flow-cli/tests/cli_integration.rs
assertion_line: 69
expression: output
---
{
  "calls": [
    {
      "attempts": 1,
      "fanout": null,
      "mode": "sync",
      "node": "fetch",
      "response": {
        "payload": {
          "description": "Stub forecast",
          "forecast_date": "today",
          "mode": "sync",
          "target": "connector.weather.get@1",
          "temp_c": 21.0
        }
      },
      "target": "connector.weather.get@1"
    }
  ],
  "flow_id": "assistant.weather.daily",
  "result": {
    "forecast_date": "today",
    "temp_c": 21.0
  },
  "status": "ok",
  "version": 1
}
